--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
     "express": "^4.21.0",
+    "express-rate-limit": "^7.4.0",
     "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
     "morgan": "^1.10.0",
@@ -32,7 +33,8 @@
     "sequelize": "^6.37.3",
     "stoppable": "^1.1.0",
     "winston": "^3.14.2",
-    "winston-transport-sequelize": "^4.0.10"
+    "winston-transport-sequelize": "^4.0.10",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "eslint": "8.57.1",
