--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
       }
     ],
     "no-console": "off",
+    "no-restricted-syntax": "off",
     "import/prefer-default-export": "off",
     "arrow-parens": ["off", "as-needed"],
     "max-len": [
@@ -52,6 +53,7 @@
       "plugins": ["unused-imports", "simple-import-sort"],
       "extends": ["airbnb-base","prettier"],
       "rules": {
+        "no-restricted-syntax": "off",
         "no-unused-expressions": "off"
       }
     }
