--- a/package.json
+++ b/package.json
@@ -1,53 +1,62 @@
 {
-  "name": "@decoupled/api",
-  "version": "0.0.1",
-  "private": true,
-  "main": "src/index.js",
+  "name": "decoupled-api",
+  "packageManager": "yarn@4.3.1",
   "scripts": {
-    "dev": "nodemon",
-    "prettier": "prettier --check **/*.js",
-    "prettier:fix": "prettier --write **/*.js",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix . ",
-    "keygen": "node scripts/keygen.js",
+    "dev": "tsx watch --clear-screen=false src/index.ts",
+    "build": "rimraf dist && tsup",
+    "start": "node dist/index.js",
+    "clean": "rimraf dist coverage",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --config .prettierrc --write .",
     "mig:gen": "sequelize-cli model:create --underscored --name",
     "mig:up": "sequelize-cli db:migrate",
     "mig:down": "sequelize-cli db:migrate:undo",
     "mig:reset": "sequelize-cli db:migrate:undo:all"
   },
   "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^7.0.0",
     "app-root-path": "^3.1.0",
-    "chalk": "4.1.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
-    "express": "^4.21.0",
+    "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
     "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
     "morgan": "^1.10.0",
-    "node-jose": "^2.2.0",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
+    "pino": "^9.1.0",
     "sequelize": "^6.37.3",
-    "stoppable": "^1.1.0",
+    "swagger-ui-express": "^5.0.0",
     "winston": "^3.14.2",
     "winston-transport-sequelize": "^4.0.10",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/compression": "^1",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1",
+    "@types/node": "^20.12.12",
+    "@types/pg": "^8",
+    "@types/swagger-ui-express": "^4.1.6",
     "eslint": "8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "husky": "^9.1.6",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "lint-staged": "^15.2.10",
-    "nodemon": "^3.1.7",
-    "prettier": "^3.3.3",
-    "sequelize-cli": "^6.6.2"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+    "pino-http": "^10.1.0",
+    "prettier": "^3.2.5",
+    "rimraf": "^5.0.7",
+    "sequelize-cli": "^6.6.2",
+    "tsup": "^8.0.2",
+    "tsx": "^4.10.5",
+    "typescript": "^5.4.5"
+  }
 }
