--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "rimraf dist && tsup",
     "start": "node dist/index.js",
     "clean": "rimraf dist coverage",
+    "keygen": "node scripts/keygen.js",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "format": "prettier --config .prettierrc --write .",
@@ -26,6 +27,7 @@
     "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
     "morgan": "^1.10.0",
+    "node-jose": "^2.2.0",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
     "pino": "^9.1.0",
