--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
     "build": "rimraf dist && tsup",
     "start": "node dist/index.js",
     "clean": "rimraf dist coverage",
-    "keygen": "node scripts/keygen.js",
+    "keygen": "tsx scripts/keygen.ts",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "format": "prettier --config .prettierrc --write .",
-    "mig:gen": "sequelize-cli model:create --underscored --name",
-    "mig:up": "sequelize-cli db:migrate",
-    "mig:down": "sequelize-cli db:migrate:undo",
-    "mig:reset": "sequelize-cli db:migrate:undo:all"
+    "mig:gen": "knex migrate:make -x ts",
+    "migrate": "knex migrate:latest",
+    "rollback": "knex migrate:rollback"
   },
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.0.0",
@@ -26,15 +25,14 @@
     "express-rate-limit": "^7.4.0",
     "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
+    "knex": "^3.1.0",
     "morgan": "^1.10.0",
     "node-jose": "^2.2.0",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
     "pino": "^9.1.0",
-    "sequelize": "^6.37.3",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.14.2",
-    "winston-transport-sequelize": "^4.0.10",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -43,6 +41,7 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1",
     "@types/node": "^20.12.12",
+    "@types/node-jose": "^1.1.13",
     "@types/pg": "^8",
     "@types/swagger-ui-express": "^4.1.6",
     "eslint": "8.57.1",
@@ -56,7 +55,6 @@
     "pino-http": "^10.1.0",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.7",
-    "sequelize-cli": "^6.6.2",
     "tsup": "^8.0.2",
     "tsx": "^4.10.5",
     "typescript": "^5.4.5"
