--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "envalid": "^8.0.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
+    "express-validator": "^7.2.0",
     "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
     "knex": "^3.1.0",
