--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --config .prettierrc --write .",
     "mig:gen": "knex migrate:make -x ts",
     "migrate": "knex migrate:latest",
+    "seed": "knex seed:run",
     "rollback": "knex migrate:rollback"
   },
   "dependencies": {
@@ -23,6 +24,7 @@
     "envalid": "^8.0.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
+    "express-redis-cache": "^1.1.3",
     "express-validator": "^7.2.0",
     "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
@@ -40,6 +42,7 @@
     "@types/compression": "^1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-redis-cache": "^1",
     "@types/morgan": "^1",
     "@types/node": "^20.12.12",
     "@types/node-jose": "^1.1.13",
