--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.0.0",
     "app-root-path": "^3.1.0",
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -36,9 +37,11 @@
     "pino": "^9.1.0",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.14.2",
+    "winston-knex": "^0.2.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2",
     "@types/compression": "^1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
