--- a/package.json
+++ b/package.json
@@ -7,63 +7,80 @@
     "start": "node dist/index.js",
     "clean": "rimraf dist coverage",
     "keygen": "tsx scripts/keygen.ts",
+    "test": "mocha test/run --exit",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "format": "prettier --config .prettierrc --write .",
     "mig:gen": "knex migrate:make -x ts",
     "migrate": "knex migrate:latest",
     "seed": "knex seed:run",
-    "rollback": "knex migrate:rollback"
+    "rollback": "knex migrate:rollback",
+    "docker:up": "docker compose up -d",
+    "docker:down": "docker compose down",
+    "docker:clean": "docker compose down -v"
   },
   "dependencies": {
-    "@asteasolutions/zod-to-openapi": "^7.0.0",
+    "@asteasolutions/zod-to-openapi": "^7.1.2",
     "app-root-path": "^3.1.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "express-rate-limit": "^7.4.0",
     "express-redis-cache": "^1.1.3",
     "express-validator": "^7.2.0",
     "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
+    "joi": "^17.13.3",
+    "jose": "^5.9.3",
+    "jsonwebtoken": "^9.0.2",
+    "jwk-to-pem": "^2.0.6",
     "knex": "^3.1.0",
+    "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "node-jose": "^2.2.0",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
-    "pino": "^9.1.0",
-    "swagger-ui-express": "^5.0.0",
+    "pino": "^9.4.0",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.14.2",
     "winston-knex": "^0.2.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2",
+    "@types/chai": "^5",
     "@types/compression": "^1",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
+    "@types/express": "^5.0.0",
     "@types/express-redis-cache": "^1",
+    "@types/jsonwebtoken": "^9",
+    "@types/jwk-to-pem": "^2",
+    "@types/mocha": "^10",
     "@types/morgan": "^1",
-    "@types/node": "^20.12.12",
+    "@types/node": "^22.7.4",
     "@types/node-jose": "^1.1.13",
     "@types/pg": "^8",
     "@types/swagger-ui-express": "^4.1.6",
+    "@types/zxcvbn": "^4",
+    "chai": "^5.1.1",
     "eslint": "8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "lint-staged": "^15.2.10",
-    "pino-http": "^10.1.0",
-    "prettier": "^3.2.5",
-    "rimraf": "^5.0.7",
-    "tsup": "^8.0.2",
-    "tsx": "^4.10.5",
-    "typescript": "^5.4.5"
+    "mocha": "^10.7.3",
+    "pino-http": "^10.3.0",
+    "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
+    "tsup": "^8.3.0",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.2"
   }
 }
