--- a/redis/node-1/conf/redis.conf
+++ b/redis/node-1/conf/redis.conf
@@ -6,4 +6,4 @@ cluster-node-timeout 5000
 cluster-announce-ip 172.38.0.11
 cluster-announce-port 6379
 cluster-announce-bus-port 16379
-appendonly yes
+appendonly no
