--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/express-redis-cache": "^1",
+    "@types/figlet": "^1",
     "@types/jsonwebtoken": "^9",
     "@types/jwk-to-pem": "^2",
     "@types/mocha": "^10",
@@ -67,6 +68,8 @@
     "@types/swagger-ui-express": "^4.1.6",
     "@types/zxcvbn": "^4",
     "chai": "^5.1.1",
+    "chalk": "4.1.2",
+    "commander": "^12.1.0",
     "eslint": "8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-google": "^0.14.0",
@@ -74,8 +77,11 @@
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "figlet": "^1.7.0",
+    "inquirer": "^11.1.0",
     "lint-staged": "^15.2.10",
     "mocha": "^10.7.3",
+    "ora": "^8.1.0",
     "pino-http": "^10.3.0",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
